# bazel_compiler_modules

./: Debugging.md  PathTracing.md  README.md  TODO.md  integration_test.sh
examples/: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md
examples/toolchains/riscv/: BUILD
examples/toolchains/riscv/gcc/: cc_toolchain_config.bzl
examples/toolchains/riscv/gcc-riscv/imported/: ar  as  cpp  gcc  nm  objcopy  objdump  strip
examples/toolchains/riscv/gcc/wrappers/: ar  as  cpp  gcc  nm  objcopy  objdump  strip
examples/toolchains/x86/: BUILD
examples/toolchains/x86/gcc/: cc_toolchain_config.bzl  elf_x86_64.xce
examples/toolchains/x86/gcc-x86_64/imported/: ar  as  cpp  gcc  nm  objcopy  objdump  strip
examples/toolchains/x86/gcc/wrappers/: ar  as  cpp  gcc  nm  objcopy  objdump  strip
modules/fedora_syslibs/40.0.0/: MODULE.bazel  source.json
modules/gcc_riscv_suite/14.1.0/: source.json
modules/gcc_riscv_suite/15.0.0/: MODULE.bazel  source.json
modules/gcc_x86_64_suite/14.1.0/: source.json
modules/gcc_x86_64_suite/15.0.0/: source.json
scripts/: compiler_suite_generator.py  gcc_riscv.py  gcc_riscv_14_1_0.py  gcc_riscv_15_0_0.py  gcc_riscv_15_0_0_1.py  gcc_x86_64.py  gcc_x86_64_14_1_0.py  gcc_x86_64_15_0_0.py
src/gcc_riscv_suite/: .gitignore  BUILD  MODULE.bazel
src/gcc_riscv_suite/14.1.0/: BUILD  MODULE.bazel
src/gcc_riscv_suite/15.0.0/: MODULE.bazel
src/gcc_riscv_suite/15.0.0.1/: BUILD  MODULE.bazel
src/gcc_x86_64_suite/: .gitignore  BUILD  MODULE.bazel
src/gcc_x86_64_suite/14.1.0/: MODULE.bazel
src/gcc_x86_64_suite/15.0.0/: BUILD
