module(
    name = "bazel_compiler_modules_examples",
    version = "0.3",
)

bazel_dep(name="gcc_riscv_suite", version="15.2.0.1")
bazel_dep(name="gcc_x86_64_suite", version="15.0.1.1")

register_toolchains(
    # currently gcc-riscv64 with most of the rva23 extensions (vector, bit manipulation, ...)
    "//toolchains/riscv:riscv64-rva23",
    # a generic x86_64 toolchain useful for local integration and unit testing
    "//toolchains/x86:x86_64-native",
)
